# ShadowDance

./: .gitignore  CLEAN_TRACES_REFERENCE.md  DEMO_GUIDE.md  LICENSE  MANIFEST.in  README.md  format.md  inspect_langsmith.py  llms.txt  pitch  pyproject.toml  requirements.txt  shadowdance.py  test_shadowdance.py
cb/: README.md  example_usage.py  pyproject.toml  pytest  shadowdance.py  test_shadowdance.py
examples/: __init__.py  basic.py  clean_demo.py  code_as_policies.py  error_handling.py  llm_robot_stack.py  nested_tracing.py  openai_client.py  openai_with_usage.py  openrouter.py  pick_up_box.py  planner.py  robot_evaluation.py  test_openrouter.py  virtual_robot.py  vision.py  with_virtual_robot.py
gemini/: shadowdance.py  test_shadowdance.py
qwen/: README.md  __init__.py  test_shadowdance.py
qwen/examples/: agent_integration.py  basic.py  error_handling.py
shadowdance/: __init__.py
shadowdance/adapters/: README.md  __init__.py  example.py  langfuse.py  langsmith.py  passthrough.py  weave.py
tests/: README.md  __init__.py  run_examples.py  test_adapter_comparison.py  test_unitree_examples.py
