[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowdance"
version = "0.3.0"
description = "LangSmith observability for LLM and robot SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ShadowDance Contributors", email = "shadowdance@example.com"}
]
maintainers = [
    {name = "ShadowDance Contributors", email = "shadowdance@example.com"}
]
keywords = [
    "langsmith",
    "llm",
    "robotics",
    "observability",
    "tracing",
    "debugging",
    "openai",
    "unitree",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kristopolous/ShadowDance"
Documentation = "https://github.com/kristopolous/ShadowDance#readme"
Repository = "https://github.com/kristopolous/ShadowDance.git"
Issues = "https://github.com/kristopolous/ShadowDance/issues"
Changelog = "https://github.com/kristopolous/ShadowDance/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
only-include = ["shadowdance.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
